--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 AIPROXY_TOKEN=eyJhbGciOiJIUzI1NiJ9.eyJlbWFpbCI6IjIzZjIwMDQzMjBAZHMuc3R1ZHkuaWl0bS5hYy5pbiJ9.5hmRvFF5klmzt1tiRKlvqMFQngCb0It_gcNLdPHAQxE
+USER_EMAIL=23f2004320@ds.study.iitm.ac.in
